# wssh

./: .gitignore  LICENSE  README.md  config.example.yaml  config.preset.example.yaml  install.sh  pyproject.toml  wssh-setup.sh
src/wssh/: __init__.py  auth.py  cli.py  completion.py  config.py  connect.py  constants.py  doctor.py  email.py  server_setup.py  setup_flow.py  shell_rc.py  ssh_key.py  targets.py  warpgate.py  warpgate_admin.py
tests/: test_auth.py  test_completion.py  test_config.py  test_connect.py  test_connect_direct.py  test_email.py  test_maybe_offer_setup.py  test_server_setup.py  test_shell_rc.py  test_ssh_key.py  test_targets_cache.py  test_warpgate_add_key.py  test_warpgate_admin.py  test_warpgate_admin_roles.py  test_warpgate_keys.py
