[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "wssh"
version = "0.1.0"
description = "SSH to Warpgate targets from your terminal — setup, connect, and manage bastion access"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
dependencies = [
    "httpx>=0.27",
    "pyyaml>=6.0",
    "rich>=13.0",
    "typer>=0.12",
]

[project.optional-dependencies]
cookies = ["browser-cookie3>=0.19"]
dev = ["pytest>=8.0", "pytest-httpx>=0.30"]

[project.scripts]
wssh = "wssh.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/wssh"]

[tool.pytest.ini_options]
testpaths = ["tests"]
